# SimpleTradeAllerting

./: README.md  main.py  requirements.txt  telegram_bot.py
Solution/: Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
Solution/solution/: logic.py
Solution/solution/config/: config.py
Solution/solution/config/files/: config.json
Solution/tests/: test_responses_from_clients.py  test_solution.py
